2021-09-19 Automated Blog Pages
python automated pages for update

--- a/People.html
+++ b/People.html
@@ -72,6 +72,103 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Memories of Soft Drinks From the 1960s</h2>
+      <hr>
+      <h5>September 19, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_07.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p><h3>Humiston’s Grocery – Penny Candy, “Houns”, and a Great Front Step…</h3></p>
+
+<p>Humiston’s Grocery, next to the Lumberyard, on East Main St. was a fixture in the business district for many years.</p> 
+
+<p>The first image above that shows Clarence “Mose” Humiston in his store is cropped from a larger photo that shows my dad, who was working in the grocery store in 1940.  At the bottom left of this first image is just part of a corner of the penny candy case that was a must-do stop for kids. The inside of the store didn't look much different in the '50s and '60s and through until it closed.</p>
+
+<p>When we bought the penny candy, Mose would always ask if we wanted a "pouche", which he pronounced as "pussh", the French word for a small bag or, literally, a pouch. </p>
+
+<p>The outside step was where we sat drinking 20 oz. Royal Crown Colas that Stephen Wood christened as "houns". The second image is of the 16 oz. version of the glass bottle of Royal Crown Cola.</p>
+
+<p>The third photo shows the complete image from inside the store. From left to right: Clarence "Mose" Humiston, his wife Kathleen, and my father, Gerald Jarvis (who was 16 when this photo was taken). The fourth photo shows Mose (on the right) on the outside of the grocery. I believe this was taken in the early 1960s. </p>
+
+<p>Who knows how many uncounted kids sat on the edge of the front deck and chugged sodas over the years?</p>
+
+<p><h3>Speaking of Soft Drinks in the 1960s…</h3></p>
+
+<p>As I added the final two photos to the Humiston’s Grocery information, I suddenly remembered the very first day Mountain Dew was sold in the North Country.</p>
+
+<p>On a sunny afternoon in August of 1964, Larry Cook and I had just finished our work day with the summer Youth Corps program. We knew that the brand new soda, called Mountain Dew, was being delivered to businesses nation-wide for the first time that day. So, we left the Town Garage and walked up to East Main. We stopped in Peterson’s, sat down at the counter, and each ordered one. Sam pulled two out of the cooler behind the fountain counter. That ice cold drink tasted pretty good after cutting brush all day on the roadside.</p>
+
+<p>Turns out, Mountain Dew was invented (formulated?) by two guys in Tennessee in 1940 as a mixer for bar drinks. The recipe was purchased by a regional distributor, and it was available in isolated areas of the country over the next 20+ years. </p>
+
+<p>The reason it went nation-wide and appeared locally in 1964 was because the national rights were bought by the Pepsi Company, and they began to deliver to all of their customers.</p>
+
+<p>The final three photos [images 5-7] posted above, show: Peterson’s exterior in the 1960s, the interior of the store in 1937 (shown are Georgie Peterson [on the left] and Evie Franklin), and the final image is of the original Mountain Dew Bottles from 1964.</p>
+
+<p>Being a kid in Chateaugay in the late 50s and early 60s was filled with tons of great times and many, many very sweet memories…</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>The Sunset Inn 1872-1945</h2>
       <hr>
       <h5>September 10, 2021 | Mick Jarvis</h5>
@@ -83,69 +180,69 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">10 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -190,7 +287,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
@@ -204,21 +301,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -282,7 +379,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Local Names on Wall that Heals</h2>
@@ -296,21 +393,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -325,7 +422,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
@@ -339,33 +436,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -407,7 +504,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
@@ -421,21 +518,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -458,7 +555,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -472,21 +569,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
 </div>
 <br>
 
@@ -505,7 +602,7 @@ They were fiercely proud of their home and its historical significance. They tre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [September 16, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [September 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
