--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,103 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Memories of Soft Drinks From the 1960s</h2>
+      <hr>
+      <h5>September 19, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 7</div>
+    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_07.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p><h3>Humiston’s Grocery – Penny Candy, “Houns”, and a Great Front Step…</h3></p>
+
+<p>Humiston’s Grocery, next to the Lumberyard, on East Main St. was a fixture in the business district for many years.</p> 
+
+<p>The first image above that shows Clarence “Mose” Humiston in his store is cropped from a larger photo that shows my dad, who was working in the grocery store in 1940.  At the bottom left of this first image is just part of a corner of the penny candy case that was a must-do stop for kids. The inside of the store didn't look much different in the '50s and '60s and through until it closed.</p>
+
+<p>When we bought the penny candy, Mose would always ask if we wanted a "pouche", which he pronounced as "pussh", the French word for a small bag or, literally, a pouch. </p>
+
+<p>The outside step was where we sat drinking 20 oz. Royal Crown Colas that Stephen Wood christened as "houns". The second image is of the 16 oz. version of the glass bottle of Royal Crown Cola.</p>
+
+<p>The third photo shows the complete image from inside the store. From left to right: Clarence "Mose" Humiston, his wife Kathleen, and my father, Gerald Jarvis (who was 16 when this photo was taken). The fourth photo shows Mose (on the right) on the outside of the grocery. I believe this was taken in the early 1960s. </p>
+
+<p>Who knows how many uncounted kids sat on the edge of the front deck and chugged sodas over the years?</p>
+
+<p><h3>Speaking of Soft Drinks in the 1960s…</h3></p>
+
+<p>As I added the final two photos to the Humiston’s Grocery information, I suddenly remembered the very first day Mountain Dew was sold in the North Country.</p>
+
+<p>On a sunny afternoon in August of 1964, Larry Cook and I had just finished our work day with the summer Youth Corps program. We knew that the brand new soda, called Mountain Dew, was being delivered to businesses nation-wide for the first time that day. So, we left the Town Garage and walked up to East Main. We stopped in Peterson’s, sat down at the counter, and each ordered one. Sam pulled two out of the cooler behind the fountain counter. That ice cold drink tasted pretty good after cutting brush all day on the roadside.</p>
+
+<p>Turns out, Mountain Dew was invented (formulated?) by two guys in Tennessee in 1940 as a mixer for bar drinks. The recipe was purchased by a regional distributor, and it was available in isolated areas of the country over the next 20+ years. </p>
+
+<p>The reason it went nation-wide and appeared locally in 1964 was because the national rights were bought by the Pepsi Company, and they began to deliver to all of their customers.</p>
+
+<p>The final three photos [images 5-7] posted above, show: Peterson’s exterior in the 1960s, the interior of the store in 1937 (shown are Georgie Peterson [on the left] and Evie Franklin), and the final image is of the original Mountain Dew Bottles from 1964.</p>
+
+<p>Being a kid in Chateaugay in the late 50s and early 60s was filled with tons of great times and many, many very sweet memories…</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>The Sunset Inn 1872-1945</h2>
       <hr>
       <h5>September 10, 2021 | Mick Jarvis</h5>
@@ -83,69 +180,69 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">10 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -190,7 +287,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Recording Change on West Main</h2>
@@ -204,27 +301,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -248,104 +345,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Carrying the Mail in the Olden Days</h2>
-      <hr>
-      <h5>August 15, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>I have been researching the Hoit/McCoy home that sat on West Main Street. It was built in by Jonathan Hoit in the 1830s. Before beginning research on the house itself and its actual construction, etc., I began by looking at what life was like back then in our hometown.</p>
-
-<p>I am looking into how the community looked back then and what businesses had been established, etc. I have also spent time looking for information about the mail at that time: when was it delivered, how was it delivered and what the entire process was like.  Here is part of the story of the US Mail in Chateaugay and the North Country almost a two hundred years ago.</p>
-
-<p>For example, the mail was carried between communities by the stage coaches that plied the dirt roads that wound across northern New York. The mail arrived at the Chateaugay Post Office at the four corners six times a week. It arrived from the west at five pm on Tuesdays, Thursdays and Saturdays and from points east at noon on Mondays, Wednesdays and Fridays. (Eventually the mail would be carried by the railroad beginning shortly after it opened in 1850.)</p>
-
-<p>Mail delivery was one of the main ways the community kept abreast of the national and world news as newspapers were often part of the mail bag contents. Some local citizens subscribed to newspapers from Albany, New York City or other large cities like Chicago and Washington, DC.</p>
-
-<p>The roads that the stages travelled were all unpaved and very rough. They could be muddy or dry and dusty depending on the weather and the seasons. Paved roads would only begin to appear in the US in the late 1800s, and even then, they appeared in the larger cities first. By 1904, only about one sixth of rural roads were paved and that total was only up to about one half of rural roads by 1935 or so.</p>
-
-<p>So, the stage drivers/mail carriers had to contend with terrible road conditions in the 1830s and 40s. This was one of the reasons for so many taverns and inns along the main roads. Horses tired quickly in such demanding road conditions, and the stops allowed for a change of teams and a chance for the stage driver and any passengers to get out and try to shake off some of the discomfort and monotony of the ride and get something to eat.</p>
-
-<p>Chateaugay had its own legendary stage driver. Josiah “Bone” Selleck drove routes in the North Country for many, many years. His home was on the main road, a few miles east of the four corners. He died in 1891 at the age of 82 and is buried in Smith Cemetery, just east of the village.</p>
-
-<p>The first photo here is of his headstone in Smith Cemetery. (Another long-time stage driver, who came along later than Bone Selleck and spanned the turn of the last century, was Pratt Hill. The photo included here shows Hill on his Tally-Ho coach. The stages of the 1830s and 40s would have looked much like the coach driven by Hill but this later version had much better suspension which made for a somewhat “smoother” ride than the earlier versions.)</p>
-
-<p>But, back to the early 1800s. Chateaugay and northern New York were not immune to another danger associated with the stagecoach mail carriers; robbers, highwaymen, hold-up men—were among the terms used to describe them. They were looking for anything valuable that might be carried by the passengers, but the mail also represented a potential source of booty.</p>
-
-<p>The following story of a mail carrier in the “Chateaugay Woods” took place in the 1830s. This printing came from the February 17, 1867 edition of the Daily Alta California, a San Francisco paper. This same account also appeared in many local and area papers, as well as others throughout the US over the years. I used this particular version as this scan was the clearest and the easiest to transcribe.</p>
-
-<p>It is true? Who knows? It could be gospel. We will never know. All I can attest to is that it appeared in scores of newspapers in the 1800s. Even the US Mail produced interesting stories 150 years ago!</p>
-
-<p>Here’s the story of mail delivery and a wheat bran holdup in the Chateaugay Woods:</p>
-
-
-<p><i>In the early annals of our country, many instances of mail robbery are found, some of which occasioned the display of great intrepidity and daring, as the perusal of the following pages will show.</i></p>
-
-<p><i>While the country was yet thinly settled, and the mails were transported on horseback, or in different kinds of vehicles, from the gig to the stage-coach, often through extensive forests, which afforded every facility for robbery, the office of stage-driver or mail carrier was no sinecure (easy job). Resolute men were required for the service, who could handle a pistol as well as a whip.</i></p>
-
-<p><i>Some thirty or forty years ago [in the 1830s], a mail coach ran in the northern part of the State of New York, through the famous “Chateaugay Woods.” The forest was many miles in extent, and common fame and many legends gave it the reputation of a noted place for freebooters and highwaymen.</i></p>
-
-<p><i>One morning the stage driver on this route had occasion to examine his pistols, and found, instead of the usual charge, that they were loaded with wheat bran! A daring villain had, through an accomplice, disarmed the driver preparatory to waylaying him. He drew the charges, cleaned the weapons, and carefully loaded them with powder and ball.</i></p>
-
-<p><i>That afternoon he mounted his stage for his drive through the Chateaugay Woods. Whistling as he went, he “cracked up” his leaders and drove into the forest. Just about at the center of the woods, a man sprang out from behind a tree and took the lead horse by the bit.</i></p>
-
-<p><i>“I say, driver,” said the footpad [a robber who had no horse], with consummate coolness, “I want to take a look at that mail.”</p></i>
-
-<p><i>“Yes, you do, no doubt, want to overhaul my mails,” replies the driver; “but I can’t be so free, unless you show me your commission. I’m the driver here, and I never give up my mails except to one regularly authorized.”</p></i>
-
-<p><i>“Oh, you don’t, eh? Well, here’s my authority,” showing the butt of a large pistol partly concealed in his bosom. “Now, dismount and bear a hand, my fine fellow, for you see I’ve got some documents about me.”</i></p>
-
-<p><i>“Yes, and so’ve I,” says the driver, instantly leveling his own trusty weapon at the highwaymen.</i></p>
-
-<p><i>“Oh, you won’t hurt nobody, I guess: I’ve seen boys playing soger [soldier] before now.”</i></p>
-
-<p><i>“Just drop those reins,” says the keeper of Uncle Sam’s mail bags, “or I take the consequences.”</i></p>
-
-<p><i>Oh, now you’re joking, my fine lad! But come, look alive, for I’m in a hurry, it’s nearly night. </i></p>
-
-<p><i>A sharp report echoed through the forests and the disciple of Dick Turpin [a famous English highwayman of the mid 1700s] was stretched upon the ground. One groan and all was over. The ball had entered his temple.</i></p>
-
-<p><i>The driver lifted the body into the coach, drove to the next stopping place, related the circumstances, and gave himself up. A brief examination before a magistrate resulted in his acquittal, and the highwaymen about the Chateaugay Woods learned that pistols can be dangerous weapons, even if they were loaded with wheat bran, provided they were in the hands of one who knew how to use them.</i></p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [September 16, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [September 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
