--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,123 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Summer of '61</h2>
+      <hr>
+      <h5>October 2, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 6</div>
+    <img src="blog/imgs/2021-10-02_summerof61/summerof61_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 6</div>
+    <img src="blog/imgs/2021-10-02_summerof61/summerof61_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 6</div>
+    <img src="blog/imgs/2021-10-02_summerof61/summerof61_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 6</div>
+    <img src="blog/imgs/2021-10-02_summerof61/summerof61_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 6</div>
+    <img src="blog/imgs/2021-10-02_summerof61/summerof61_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 6</div>
+    <img src="blog/imgs/2021-10-02_summerof61/summerof61_06.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <h4>June 1961 In Chateaugay</h4>
+
+<p>Aside from Christmas, the last day of school each June was the most eagerly awaited day of the year when I was growing up. The sheer joy of peddling away from the CCS building and into the two months of summer vacation was very special. Like today, we were dismissed during the morning of that last day, so we began our vacation with almost a full day left to dive into summer activities and set the tone for the next two months. </p>
+
+<p>I had a summer job every year beginning the summer I turned fourteen, but my summer vacation in 1961 was an amazing time.</p>
+
+<p>As I left school on June 23, 1961, report card tucked in my back pocket, I peddled my 24” Schwinn as fast as I could. When I raced home to change from my “school clothes” into what my mother called my “play clothes”, I was already getting myself ready for the remainder of the day ahead.</p>
+
+<p>I remember mowing the lawn that day (that was only one of my jobs at home which also included taking my turn washing the dishes, making my bed and keeping my room picked up every day, shaking all the scatter rugs each week when my mother cleaned the house, shoveling in the winter, raking the yard in the fall, along with weeding the garden, all of which earned me an allowance). I was almost running as I pushed that old mower, trying to get it finished before I ate lunch.</p>
+
+<p>I scarfed down my sandwich, glass of milk and four Fig Newtons (that was the house limit when cookies were the dessert). I grabbed my fishing pole, some tackle, and worm can and headed out into the sunny afternoon. It had rained the day before and that evening I had grabbed my dad’s flashlight and had picked night crawlers which now filled the worm can.</p>
+
+<p>I rode my bike down Church Street and met up with David Sorrell at Doug Bova’s store next to the train station. Leaving our bikes there, we walked up the sidewalk, across the tracks to Benny Benjamin’s store on the corner of Lake and Collins Streets.  </p>
+
+<p>Dave and I were always going on fishing adventures and that day we had a plan to fish the culvert that fed the Bailey Brook under the street. We fished the Bailey regularly where it ran through the village and we figured that there were some nice trout under that long, cool, stretch of water in the culvert. We could have stooped down and walked through it to fish but that would have spooked the trout.</p>
+
+<p>We had a plan that day. Dave had brought two cedar shakes off the roof of the shed in his back yard and we had a few small nails. The scheme was pretty simple, and probably against the fish and game regulations, but we put it into motion. </p>
+
+<p>The plan was to bait a hook and tack the line to the cedar shingle so that the worm trailed behind it by about a foot. One of us was to stay at the mouth of the culvert by Bennie’s and set the cedar shingle into the current. Then, with the reel bail open, line would be let out as the worm was carried through the culvert, past the huge trout we imagined were lurking there. The other one of us was to be at the other end of the culvert down by Bob Oliver’s Ford garage to intercept the shingle as it emerged from the culvert and, we hoped, a large fish on the hook.</p>
+
+<p>We used a rock to drive the small nail into the cedar and then bend it over to hold the line. After a few tries, we got the line secured and we were set to try it. I was to be the “receiver” at the other end for this first try, so off I raced across the street to get ready. The plan was that after I unhooked the line, Dave would reel it back in and set a line on the second shingle and repeat the process.</p>
+
+<p>Eventually, the cedar shake emerged from the culvert but no fish! I pried the nail off the line, scrambled up the bank and waved my arms to let him know he could reel it back and set it up a second time.</p>
+
+<p>We did this all afternoon, switching places at the ends of the culvert, and we only caught one fish. It was a nice one but, unfortunately, it slipped off the hook as Dave was trying to get hold of it. We got hung up on rocks in the culvert a couple times and broke the line a few times as well. </p>
+
+<p>Eventually, we tired of the project and packed up our poles and stuff. We walked back over to Bova’s and each bought an ice cream sandwich to take the sting off the pretty-much failed grand fishing expedition. </p>
+
+<p>I got home in time for supper and then met up with Stephen Wood and Craig Murray. We were headed to the movies in the Town Hall. </p>
+
+<p>So, downtown we went, eager to take in the latest monster movie: Caltiki – The Immortal Monster. This was the latest movie masterpiece to come out of Europe; Italy in this case. It involved a Blob-type monster discovered at the bottom of an ancient Aztec well. It feasted on human flesh. Once it was released from the well and placed in a lab, it quickly escaped and began to wreak havoc on the public. It was finally destroyed with fire and the world was saved from sure destruction. Not a classic but great fun for thirteen year old boys just beginning a two month break from school.</p>
+
+<p>We didn’t stay for the second movie but headed out for Jake’s Red Hots to have some michigans. We left the movies with a couple other friends and headed down Main Street. One of the guys, I don’t remember who it was, dropped back from the group and quietly reached out and touched one of the others on the back of his neck while making the sounds Caltiki had made in the movie. Of course, the victim jumped, yelled and cursed out his tormentor. We all laughed and teased him and had a grand time headed to Jake’s. No one ever said thirteen year boys were the sharpest pencils in the jar!</p>
+
+<p>In any event, we had our michigans and each headed home (before curfew), the first day of summer vacation 1961 in the books.</p>
+
+<p>It proved to be a great summer break. We played uncounted games of baseball at the field near the old school at the end of Church Street, with not an adult in sight. We chose teams, umpired our own games and worked out any disputes ourselves. We went to more movies, rode our bikes all over the place, camped at the Boardman, fished the Bailey, the Boardman, the Marble and the Chateaugay Rivers, and generally goofed around that summer. </p>
+
+<p>Most of us were Yankee fans and we followed the team closely as they were having an historic season with Roger Maris and Mickey Mantle chasing Babe Ruth’s home run record. They won 109 games and beat Cincinnati in the World Series. To this day, this remains my all-time favorite Yankee Season and every so often, I reread the book, “Season of Glory” just to take it all in once again. </p>
+
+<p>As long as I did my chores at home, showed up for meals on time and was in by curfew each night, I was allowed to be off on my bike with playing and exploring as my full-time “jobs” that summer.</p>
+
+<p>It was truly a safe, carefree, and fun-filled summer before I became a fourteen year old “working man” with the Neighborhood Youth Corps starting in July and August of 1962.</p>
+
+<hr>
+
+<h4>Photo Captions:</h4>
+<li>Image 1 – Benny Benjamin’s Store</li>
+<li>Image 2 – Bob Oliver’s Garage</li>
+<li>Image 3 – Caltiki ad in the Chateaugay Record</li>
+<li>Image 4 – Caltiki Theater Poster</li>
+<li>Image 5 – One of the monster’s victims</li>
+<li>Image 6 – The story of the Yankees 1961 season</li>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Memories of Soft Drinks From the 1960s</h2>
       <hr>
       <h5>September 19, 2021 | Mick Jarvis</h5>
@@ -83,51 +200,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -166,7 +283,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Sunset Inn 1872-1945</h2>
@@ -180,69 +297,69 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">10 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -286,71 +403,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Recording Change on West Main</h2>
-      <hr>
-      <h5>September 5, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 3</div>
-    <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 3</div>
-    <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 3</div>
-    <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_03.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>As much as some of us do not like it, change happens constantly. It is inevitable. In the case of the Historical Society and its mission, when notable buildings, etc. disappear we may be disappointed with their removal, but we forge ahead with our objective to record and archive them for those who will come after us.</p>
-
-<p>To that end, here are three photos. The first is of the McCoy house on West Main Street taken on May 5 of this year. The second is of the same property taken September 5th from the same vantage point (on the sidewalk in front of where the Denio house stood, looking east to the McCoy home). The third was taken of the home and the barns and stable behind it in the 1920s, looking from the East.</p>
-
-<p>To record this particular home, we have taken hundreds of photos. There is a set showing the original exterior views including the wooded area behind the house. Another set of images has documented the complete interior of the house from the attic to the basement. Still more albums record the demolition of the McCoy and Denio houses and the subsequent clearing of the lots. The final photo file shows the construction of the Dollar General store, with photos taken each weekend throughout the construction process. The photo here includes a few cars belonging to folks working this morning to stock the shelves of merchandise. It appears that the opening is getting closer.</p>
-
-<p>In addition to the photo files we have taken for our archives, we have a file containing house scenes from over the years, donated by the McCoy estate. Also, a history of the McCoy house has been written and is ready to appear as an article in an upcoming issue of our quarterly newsletter.</p>
-
-<p>While our group has many documents and objects which we maintain in the Archival Center as an historical collection, in cases such as these changes involving homes, etc., we have neither the means nor the mission to save and/or to do restoration. So many of Chateaugay’s early and noteworthy structures have been demolished over the years, at least this one has been documented as thoroughly as we possibly could. We can’t save and maintain them all, but we can record and note their existence for people seeking information in future years.</p>
-
-<p>Imagine if someone had taken extensive photographs of the fairgrounds at the end of Collins Street, or the Chasm House hotel, or the train yard with the passenger, freight depots, the warehouses and various rail sidings, or the High Falls Pulp and Paper Company, or the Chateaugay Pulp and Paper Company, and so many other local landmarks from days past. We would certainly be grateful to be able to come upon boxes of such photographs today.</p>
-
-<p>By the same token, hopefully history enthusiasts will be delighted to come upon the archived images of this house and the changes happening there, a hundred years from now.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [September 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [October 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
