2021-10-10 Blog Update_Content

--- a/Farms.html
+++ b/Farms.html
@@ -55,6 +55,7 @@
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
 <li> <a class="page-scroll" href=Farms.html>Farms</a></li>
+<li> <a class="page-scroll" href=Lakes.html>Lakes</a></li>
 <li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
 <li> <a class="page-scroll" href=Transportation.html>Transportation</a></li>
@@ -210,7 +211,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [October 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [October 13, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
