2021-10-17 Blog Update Python Automation

--- a/Transportation.html
+++ b/Transportation.html
@@ -73,6 +73,85 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>"Linen" Postcards</h2>
+      <hr>
+      <h5>October 17, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_06.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Have you ever seen postcards labelled “Greetings From Chateaugay, New York” that don’t really represent a local scene, like the ones shown here? If you have, then you were most likely looking at what is known as a “Linen” postcard.</p>
+
+<p>A German immigrant named Curt Teich (pronounced “tike”) developed a new type of postcard in the early 1930s. It had a very high cotton content which resulted in the linen-like look to the postcard paper. In addition, Teich invented a new coloring technique which allowed for vibrant tones and hues which made the cards particularly eye catching, like mini color paintings.</p>
+
+<p>These cards were produced from the 1930s into the 1950s. They typically had a tagline on the border that read “Greetings From Chateaugay” (or any other specific location). Because automobile use and the idea of travelling for vacations were both growing rapidly, most of the scenes were landscapes, of a sort, shown in vivid colors and portraying sweeping, scenic vistas.</p>
+
+<p>The majority of the scenes were actually made by combining specific features from several original images. In effect, they were collages of roadways, mountains, water, trees and plants that made up a scene that did not (nor was it intended to) represent the specific place mentioned in the tagline.</p>
+
+<p>The main appeal of the linen postcards was the vibrant, and often surreal, palette of colors. This was a great contrast to the Depression era postcards of black and white images.</p>
+
+<p>Linen postcards began to be replaced with actual photographs in the 1950s. This coincided with the growth of the Kodak company. In fact, the earliest true photo postcards are sometimes referred to as “Kodachrome” postcards.</p>
+
+<p>Five of the views shown here are linen postcards. The sixth is image is of an early photographic postcard which contained a tagline like its linen predecessors had displayed. Incidentally, this photo postcard is also a collage-type image and the photos used are not specific to the community named in the tagline.</p>
+
+<p>So, if you run across any postcards like these, you are looking at a vivid, stylized scene that only shares the name in the tagline with our hometown. The scene depicted (whether real or constructed of several unrelated parts) is not to be found anywhere in what we know as Chateaugay.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
       <hr>
       <h5>August 15, 2021 | Mick Jarvis</h5>
@@ -84,21 +163,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -162,7 +241,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Railroad: Freight Operation</h2>
@@ -176,33 +255,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -281,7 +360,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Railroad in Chateaugay</h2>
@@ -295,81 +374,81 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">8 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">9 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">10 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">11 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">12 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_12.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -454,7 +533,7 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [October 13, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [November 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
