--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,85 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>"Linen" Postcards</h2>
+      <hr>
+      <h5>October 17, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 6</div>
+    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_06.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Have you ever seen postcards labelled “Greetings From Chateaugay, New York” that don’t really represent a local scene, like the ones shown here? If you have, then you were most likely looking at what is known as a “Linen” postcard.</p>
+
+<p>A German immigrant named Curt Teich (pronounced “tike”) developed a new type of postcard in the early 1930s. It had a very high cotton content which resulted in the linen-like look to the postcard paper. In addition, Teich invented a new coloring technique which allowed for vibrant tones and hues which made the cards particularly eye catching, like mini color paintings.</p>
+
+<p>These cards were produced from the 1930s into the 1950s. They typically had a tagline on the border that read “Greetings From Chateaugay” (or any other specific location). Because automobile use and the idea of travelling for vacations were both growing rapidly, most of the scenes were landscapes, of a sort, shown in vivid colors and portraying sweeping, scenic vistas.</p>
+
+<p>The majority of the scenes were actually made by combining specific features from several original images. In effect, they were collages of roadways, mountains, water, trees and plants that made up a scene that did not (nor was it intended to) represent the specific place mentioned in the tagline.</p>
+
+<p>The main appeal of the linen postcards was the vibrant, and often surreal, palette of colors. This was a great contrast to the Depression era postcards of black and white images.</p>
+
+<p>Linen postcards began to be replaced with actual photographs in the 1950s. This coincided with the growth of the Kodak company. In fact, the earliest true photo postcards are sometimes referred to as “Kodachrome” postcards.</p>
+
+<p>Five of the views shown here are linen postcards. The sixth is image is of an early photographic postcard which contained a tagline like its linen predecessors had displayed. Incidentally, this photo postcard is also a collage-type image and the photos used are not specific to the community named in the tagline.</p>
+
+<p>So, if you run across any postcards like these, you are looking at a vivid, stylized scene that only shares the name in the tagline with our hometown. The scene depicted (whether real or constructed of several unrelated parts) is not to be found anywhere in what we know as Chateaugay.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Resort Hotels on Upper Chateaugay Lake</h2>
       <hr>
       <h5>October 10, 2021 | Mick Jarvis</h5>
@@ -84,27 +163,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2021-10-10_lakeresorts/lakeresorts_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2021-10-10_lakeresorts/lakeresorts_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2021-10-10_lakeresorts/lakeresorts_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -173,7 +252,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Summer of '61</h2>
@@ -187,45 +266,45 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_06.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -289,109 +368,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Memories of Soft Drinks From the 1960s</h2>
-      <hr>
-      <h5>September 19, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 7</div>
-    <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_07.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p><h3>Humiston’s Grocery – Penny Candy, “Houns”, and a Great Front Step…</h3></p>
-
-<p>Humiston’s Grocery, next to the Lumberyard, on East Main St. was a fixture in the business district for many years.</p> 
-
-<p>The first image above that shows Clarence “Mose” Humiston in his store is cropped from a larger photo that shows my dad, who was working in the grocery store in 1940.  At the bottom left of this first image is just part of a corner of the penny candy case that was a must-do stop for kids. The inside of the store didn't look much different in the '50s and '60s and through until it closed.</p>
-
-<p>When we bought the penny candy, Mose would always ask if we wanted a "pouche", which he pronounced as "pussh", the French word for a small bag or, literally, a pouch. </p>
-
-<p>The outside step was where we sat drinking 20 oz. Royal Crown Colas that Stephen Wood christened as "houns". The second image is of the 16 oz. version of the glass bottle of Royal Crown Cola.</p>
-
-<p>The third photo shows the complete image from inside the store. From left to right: Clarence "Mose" Humiston, his wife Kathleen, and my father, Gerald Jarvis (who was 16 when this photo was taken). The fourth photo shows Mose (on the right) on the outside of the grocery. I believe this was taken in the early 1960s. </p>
-
-<p>Who knows how many uncounted kids sat on the edge of the front deck and chugged sodas over the years?</p>
-
-<p><h3>Speaking of Soft Drinks in the 1960s…</h3></p>
-
-<p>As I added the final two photos to the Humiston’s Grocery information, I suddenly remembered the very first day Mountain Dew was sold in the North Country.</p>
-
-<p>On a sunny afternoon in August of 1964, Larry Cook and I had just finished our work day with the summer Youth Corps program. We knew that the brand new soda, called Mountain Dew, was being delivered to businesses nation-wide for the first time that day. So, we left the Town Garage and walked up to East Main. We stopped in Peterson’s, sat down at the counter, and each ordered one. Sam pulled two out of the cooler behind the fountain counter. That ice cold drink tasted pretty good after cutting brush all day on the roadside.</p>
-
-<p>Turns out, Mountain Dew was invented (formulated?) by two guys in Tennessee in 1940 as a mixer for bar drinks. The recipe was purchased by a regional distributor, and it was available in isolated areas of the country over the next 20+ years. </p>
-
-<p>The reason it went nation-wide and appeared locally in 1964 was because the national rights were bought by the Pepsi Company, and they began to deliver to all of their customers.</p>
-
-<p>The final three photos [images 5-7] posted above, show: Peterson’s exterior in the 1960s, the interior of the store in 1937 (shown are Georgie Peterson [on the left] and Evie Franklin), and the final image is of the original Mountain Dew Bottles from 1964.</p>
-
-<p>Being a kid in Chateaugay in the late 50s and early 60s was filled with tons of great times and many, many very sweet memories…</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [October 13, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [November 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
